--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -41,6 +41,7 @@
                 android:textColorHint="#cdd3ff">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Name"
@@ -62,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
-                    android:textColor="#000000"
+                    android:textColor="#cdd3ff"
                     android:textSize="18sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -144,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Password"
                     android:inputType="textPassword"
-                    android:textColor="#000000"
+                    android:textColor="#cdd3ff"
                     android:textSize="18sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -161,7 +162,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Confirm Password"
                     android:inputType="textPassword"
-                    android:textColor="#000000"
+                    android:textColor="#cdd3ff"
                     android:textSize="18sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
