--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -35,6 +35,7 @@
 
         <!-- User Profile -->
         <LinearLayout
+            android:id="@+id/user_profile_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
