updates in homepage
-added top songs section
-added a section to allow users to play offline/local file from device
-added miniplayer to display status of current playing song from anywhere in the app
-minor changes in songplayer colors

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,14 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="75dp" />
 
+    <FrameLayout
+        android:id="@+id/miniPlayerContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
+        android:layout_gravity="bottom"
+        android:elevation="10dp"/>
+
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:layout_width="wrap_content"
