--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,63 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <RelativeLayout
-        android:id="@+id/relativeLayout"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/TITLE"
-            android:textSize="40sp"
-            android:fontFamily="@font/google_sans_regular"/>
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
 
-        <ImageView
-            android:id="@+id/settings_icon"
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="330dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/round_settings_24" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/TITLE"
+                android:textSize="40sp"
+                android:fontFamily="@font/google_sans_regular"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/relativeLayout"
-        android:layout_marginTop="20dp">
+            <ImageView
+                android:id="@+id/settings_icon"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="330dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/round_settings_24" />
+        </RelativeLayout>
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingHorizontal="18dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/google_sans_regular"
-                android:text="@string/category"
-                android:textColor="@color/white"
-                android:textColorHighlight="@color/black"
-                android:textSize="30sp" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/categories_recycler_view"
+            android:layout_below="@+id/relativeLayout"
+            android:layout_marginTop="20dp">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/google_sans_regular"/>
-        </LinearLayout>
-    </ScrollView>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingHorizontal="18dp">
 
 
-</RelativeLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/google_sans_regular"
+                        android:text="@string/category"
+                        android:textColor="@color/white"
+                        android:textColorHighlight="@color/black"
+                        android:textSize="30sp" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/categories_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/google_sans_regular"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/topSongsLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Top Songs"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp"
+                        android:paddingVertical="16dp" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/top_songs_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/google_sans_regular"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/offline_songs_label"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Music from your device"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp"
+                        android:paddingVertical="16dp" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/offline_songs_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/google_sans_regular"
+                        android:layout_marginBottom="70dp"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
+    </RelativeLayout>
+
+</ScrollView>
