--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,10 @@
         <item name="colorPrimary">@color/material_dynamic_primary10</item>
         <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
         <item name="colorAccent">@color/material_dynamic_neutral70</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:windowLightStatusBar">false</item>
 <!--        <item name="android:fontFamily">@font/GoogleSans-Regular</item>-->
     </style>
+
 
 </resources>
