--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:id="@+id/mainSwipeRefreshLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="match_parent">
     <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -47,6 +52,27 @@
                 android:orientation="vertical"
                 android:paddingHorizontal="18dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/user_history"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/recently_played"
+                        android:textColor="@android:color/white"
+                        android:fontFamily="@font/google_sans_regular"
+                        android:textSize="30sp"
+                        android:paddingVertical="16dp" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/user_history_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/google_sans_regular"/>
+                </LinearLayout>
+                <!--  implement user history and its recycler -->
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -59,7 +85,7 @@
                         android:text="@string/category"
                         android:textColor="@color/white"
                         android:textColorHighlight="@color/black"
-                        android:textSize="30sp" />
+                        android:textSize="20sp" />
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/categories_recycler_view"
                         android:layout_width="match_parent"
@@ -76,8 +102,9 @@
                         android:id="@+id/topSongsLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Top Songs"
+                        android:text="@string/top_songs"
                         android:textColor="@android:color/white"
+                        android:fontFamily="@font/google_sans_regular"
                         android:textSize="20sp"
                         android:paddingVertical="16dp" />
                     <androidx.recyclerview.widget.RecyclerView
@@ -98,6 +125,7 @@
                         android:layout_height="wrap_content"
                         android:text="Music from your device"
                         android:textColor="@android:color/white"
+                        android:fontFamily="@font/google_sans_regular"
                         android:textSize="20sp"
                         android:paddingVertical="16dp" />
                     <androidx.recyclerview.widget.RecyclerView
@@ -113,3 +141,5 @@
     </RelativeLayout>
 
 </ScrollView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
