--- a/app/src/main/res/layout/mini_player.xml
+++ b/app/src/main/res/layout/mini_player.xml
@@ -15,7 +15,8 @@
         android:padding="12dp"
         android:orientation="horizontal"
         android:background="@drawable/custom_layout_shape"
-        android:elevation="8dp">
+        android:elevation="8dp"
+        >
 
         <ImageView
             android:id="@+id/miniPlayerArtwork"
