--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -87,18 +87,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingHorizontal="16dp">
+        android:paddingHorizontal="16dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginVertical="20dp">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
+<!--        <View-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"/>-->
+
+
+        <ImageView
+
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:contentDescription="@string/download_song"
+            android:src="@drawable/round_volume_up_24"
+            android:layout_marginEnd="20dp"/>
+        <ImageView
+
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:contentDescription="@string/download_song"
+        android:src="@drawable/round_repeat_24"
+            android:layout_marginEnd="20dp"/>
+        <ImageView
+
+        android:layout_width="40sp"
+        android:layout_height="40sp"
+        android:contentDescription="@string/download_song"
+        android:src="@drawable/round_add_circle_outline_24"
+            android:layout_marginEnd="20dp"/>
+
         <ImageView
             android:id="@+id/download_button"
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:contentDescription="@string/download_song"
-            android:src="@drawable/round_file_download_24" />
+            android:src="@drawable/round_file_download_24"
+            />
+
     </LinearLayout>
 
     <androidx.media3.ui.PlayerView
