--- a/app/src/main/res/layout/mini_player.xml
+++ b/app/src/main/res/layout/mini_player.xml
@@ -7,7 +7,8 @@
     android:backgroundTint="@android:color/transparent"
     app:cardElevation="8dp"
     app:cardCornerRadius="16dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:id="@+id/miniPlayerMain">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,6 +17,7 @@
         android:orientation="horizontal"
         android:background="@drawable/custom_layout_shape"
         android:elevation="8dp"
+
         >
 
         <ImageView
