--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,49 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:id="@+id/mainSwipeRefreshLayout"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/relativeLayout"
+        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/TITLE"
-                android:textSize="40sp"
-                android:fontFamily="@font/google_sans_regular"/>
+            <!--        <RelativeLayout-->
+            <!--            android:id="@+id/relativeLayout"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_marginTop="20dp">-->
 
-            <ImageView
-                android:id="@+id/settings_icon"
-                android:layout_width="50dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="330dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/round_settings_24" />
+            <!--            <TextView-->
+            <!--                android:id="@+id/textView"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="50dp"-->
+            <!--                android:layout_marginStart="20dp"-->
+            <!--                android:layout_marginTop="20dp"-->
+            <!--                android:text="@string/TITLE"-->
+            <!--                android:textSize="40sp"-->
+            <!--                android:fontFamily="@font/google_sans_regular"/>-->
+
+            <!--            <ImageView-->
+            <!--                android:id="@+id/settings_icon"-->
+            <!--                android:layout_width="50dp"-->
+            <!--                android:layout_height="40dp"-->
+            <!--                android:layout_marginStart="330dp"-->
+            <!--                android:layout_marginTop="25dp"-->
+            <!--                android:layout_marginEnd="20dp"-->
+            <!--                android:src="@drawable/round_settings_24" />-->
+            <!--        </RelativeLayout>-->
+
+            <RelativeLayout
+                android:id="@+id/museBeatSection"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:background="@drawable/musebeat_bg"
+                android:elevation="8dp"
+                android:layout_alignParentTop="true"
+                android:padding="10dp"
+                android:layout_marginVertical="20dp"
+                android:layout_marginHorizontal="7dp">
+
+                <!-- MuseBeat Logo -->
+                <ImageView
+                    android:id="@+id/museBeatLogo"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/welcome_icon_removebg"
+                    android:layout_alignParentStart="true"
+                    android:scaleType="centerInside"
+                    android:layout_marginEnd="10dp" />
+
+
+
+                <!-- MuseBeat Name -->
+                <TextView
+                    android:id="@+id/museBeatName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/museBeatLogo"
+                    android:layout_centerVertical="true"
+                    android:text="MuseBeat"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:textColor="#FFFFFF"
+                    android:fontFamily="@font/google_sans_regular"
+                    android:letterSpacing="0.1"
+                    android:shadowColor="#000000"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="3" />
+
+                <!-- Settings Icon (Right Corner) -->
+                <ImageView
+                    android:id="@+id/settings_icon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/round_settings_24"
+                    android:padding="5dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="5dp"
+                    app:tint="#FFFFFF" />
         </RelativeLayout>
+        <LinearLayout
+                android:id="@+id/headerSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_below="@id/museBeatSection">
+
+            <!-- Greeting Text -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="18dp"
+                android:layout_marginBottom="10dp">
+
+                <TextView
+                    android:id="@+id/home_greetingtxt"
+                    android:text="HELLO JACK"
+                    android:textSize="18sp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/google_sans_regular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:text="What do you feel like today?"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/google_sans_regular"
+                    android:textColor="#E0E0E0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/home_searchBar"
+                android:layout_below="@id/headerSection"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:orientation="horizontal"
+                android:background="@drawable/search_bar_bg"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:elevation="5dp">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/baseline_search_24"
+                    android:layout_marginEnd="10dp"
+                    app:tint="#000000" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:hint="Search song, album, playlist, artist"
+                    android:textColor="#000000"
+                    android:background="@null"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/relativeLayout"
+            android:layout_below="@+id/home_searchBar"
             android:layout_marginTop="20dp">
 
             <LinearLayout
@@ -88,7 +211,8 @@
                         android:text="@string/category"
                         android:textColor="@color/white"
                         android:textColorHighlight="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        android:layout_marginVertical="15dp"/>
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/categories_recycler_view"
                         android:layout_width="match_parent"
