--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -99,7 +99,7 @@
 
 
         <ImageView
-
+            android:id="@+id/volumeCntrl"
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:contentDescription="@string/download_song"
