--- a/app/src/main/res/layout/playlist_creator.xml
+++ b/app/src/main/res/layout/playlist_creator.xml
@@ -18,6 +18,15 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Song Selection (Optional) -->
+    <EditText
+        android:id="@+id/search_song_for_playlist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/editPlaylistName"
+        android:hint="Not finding what ypu want? Search"
+        android:layout_marginTop="10dp"/>
+
+
     <TextView
         android:id="@+id/txtSelectSongs"
         android:layout_width="wrap_content"
@@ -26,7 +35,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/editPlaylistName"
+        app:layout_constraintTop_toBottomOf="@id/search_song_for_playlist"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
