--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -116,7 +116,8 @@
 
         android:layout_width="40sp"
         android:layout_height="40sp"
-        android:contentDescription="@string/download_song"
+            android:id="@+id/add_to_playlist"
+        android:contentDescription="@string/add_to_playlist"
         android:src="@drawable/round_add_circle_outline_24"
             android:layout_marginEnd="20dp"/>
 
